Fixing bug 152978, problem on Mac platforms where Flash "drags" like an image would, r=bnesse, sr=sfraser